@@ -661,9 +661,7 @@ CL.AddConstantN('rsAnonymousPas','String').SetString(rsAnonymousPas);
 CL.AddConstantN('rsFTPPassiveMo','String').SetString(rsFTPPassiveMo);
 CL.AddConstantN('rsCometElement','String').SetString(rsCometElement);
 CL.AddConstantN('rsAsteroidElem','String').SetString(rsAsteroidElem);
-CL.AddConstantN('rsBrightNEO','String').SetString(rsBrightNEO);
 CL.AddConstantN('rsMPCHttp','String').SetString(rsMPCHttp);
-CL.AddConstantN('rsMPCFtp','String').SetString(rsMPCFtp);
 CL.AddConstantN('rsFirst5000','String').SetString(rsFirst5000);
 CL.AddConstantN('rsOnlineDSS','String').SetString(rsOnlineDSS);
 CL.AddConstantN('rsOnlinePictur','String').SetString(rsOnlinePictur);
